# WMSim

./: .clang-format  CMakeLists.txt  em.db  run_clang-format.sh  wm.db
database/include/: dbloader.h
database/src/: dbloader.cpp
include/: model.h
simulator/include/: simulator.h  wm.h
simulator/src/: simulator.cpp  wm.cpp
src/: main.cpp
visualization/include/: visualizer.h
visualization/src/: visualizer.cpp
